add coupon for udemy LoveGit

--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Welcome to your Appcelerator Titanium Mobile Project
 
 2. You will need the custom Info.plist file if you chose to submit the project to the iOS app store.  It contains pointers to additional icons.
 
-3. If you would like to learn how to use Titanium Appcelerator take a look at my free course at udemy.com: http://www.udemy.com/mobile-phone-development/
+3. If you would like to learn how to use Titanium Appcelerator take a look at my free course at udemy.com: http://www.udemy.com/mobile-phone-development/ use coupon code: LoveGit
 
 
 
